--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# Database Connection Settings
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/questiondb
+spring.datasource.username=root
+spring.datasource.password=98174324
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
